# boson-sd-hardware

./: .gitignore  LICENSE  README.md
fw/bosonBreakoutDemo/: .clang-format  CMakeLists.txt  LICENSE-MIT  README.md  platform.cmake  rules.cmake  test.cpp
fw/bosonBreakoutDemo/include/atmel/: sam.h  samd51.h  samd51g18a.h  samd51g19a.h  samd51j18a.h  samd51j19a.h  samd51j20a.h  samd51n19a.h  samd51n20a.h  samd51p19a.h  samd51p20a.h  system_samd51.h
fw/bosonBreakoutDemo/include/atmel/component/: ac.h  adc.h  aes.h  ccl.h  cmcc.h  dac.h  dmac.h  dsu.h  eic.h  evsys.h  freqm.h  gclk.h  hmatrixb.h  i2s.h  icm.h  mclk.h  nvmctrl.h  osc32kctrl.h  oscctrl.h  pac.h  pcc.h  pdec.h  pm.h  port.h  qspi.h  ramecc.h  rstc.h  rtc.h  sdhc.h  sercom.h  supc.h  tal.h  tc.h  tcc.h  trng.h  usb.h  wdt.h
fw/bosonBreakoutDemo/include/atmel/instance/: ac.h  adc0.h  adc1.h  aes.h  ccl.h  cmcc.h  dac.h  dmac.h  dsu.h  eic.h  evsys.h  freqm.h  gclk.h  hmatrix.h  i2s.h  icm.h  mclk.h  nvmctrl.h  osc32kctrl.h  oscctrl.h  pac.h  pcc.h  pdec.h  pm.h  port.h  pukcc.h  qspi.h  ramecc.h  rstc.h  rtc.h  sdhc0.h  sdhc1.h  sercom0.h  sercom1.h  sercom2.h  sercom3.h  sercom4.h  sercom5.h  sercom6.h  sercom7.h  (+18 more)
fw/bosonBreakoutDemo/include/atmel/pio/: samd51g18a.h  samd51g19a.h  samd51j18a.h  (+6 more)
fw/bosonBreakoutDemo/kbuild/: .ninja_deps  .ninja_log  bosonBreakout.map  build.ninja  rules.ninja
fw/bosonBreakoutDemo/kbuild/src/: bosonBreakout.elf  bosonBreakout.hex
fw/bosonBreakoutDemo/scripts/: atmelice.bat  build.sh  setup.sh
fw/bosonBreakoutDemo/src/: CMakeLists.txt  samd51g19a_flash.ld  startup_samd51.c  system_samd51.c
fw/bosonBreakoutDemo/src/bosonBreakout/: gen_bitstream.cpp  gpio.h  hw.h  main.cpp
(+278 files in other folders)
